# cppimagefilterbase

./: .gitignore  CMakeLists.txt  filterBW.h  filterBlur.h  filterConv.h  filterEdge.h  filterRed.h  filterThreshold.h  filterbase.h  main.cpp  preProcessor.h
filters/: BWpreProc.h  filterBW.h  filterEdge.h  filterRed.h  filterThreshold.h  filterbase.h  filters.h
